--- a/lady-lollipop/package.json
+++ b/lady-lollipop/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "firebase": "^9.6.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^4.0.2"
