--- a/lady-lollipop/package.json
+++ b/lady-lollipop/package.json
@@ -8,12 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "firebase": "^9.6.7",
-    "vue": "^2.6.11",
+    "material-design-icons-iconfont": "^6.4.2",
+    "vue": "^2.6.14",
     "vue-router": "^3.2.0",
-    "vuex": "^4.0.2"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
