--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "http-errors": "^2.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.2.5",
     "nodemon": "^2.0.15"
