--- a/lady-lollipop/package.json
+++ b/lady-lollipop/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
