--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "sweetalert2": "^11.4.4"
   }
 }
