--- a/lady-lollipop/lady_lollipop_api/package.json
+++ b/lady-lollipop/lady_lollipop_api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "firebase-admin": "^10.0.2",
     "helmet": "^5.0.2",
     "joi": "^17.6.0"
