--- a/lady-lollipop/package.json
+++ b/lady-lollipop/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.15",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
